--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.115.6
-uvicorn[standard]==0.34.0
-pydantic==2.10.5
-requests==2.32.3
+fastapi>=0.100.0
+uvicorn[standard]>=0.20.0
+pydantic>=1.10.0,<2.0.0
+requests>=2.28.0
